@@ -2,6 +2,22 @@
 
 #include <QMessageBox>
 
+QDataStream &operator<<(QDataStream &AStream, const RoomParams &AParams)
+{
+	AStream << AParams.enters;
+	AStream << AParams.nick;
+	AStream << AParams.password;
+	return AStream;
+}
+
+QDataStream &operator>>(QDataStream &AStream, RoomParams &AParams)
+{
+	AStream >> AParams.enters;
+	AStream >> AParams.nick;
+	AStream >> AParams.password;
+	return AStream;
+}
+
 JoinMultiChatDialog::JoinMultiChatDialog(IMultiUserChatPlugin *AChatPlugin, const Jid &AStreamJid, const Jid &ARoomJid,
     const QString &ANick, const QString &APassword, QWidget *AParent) : QDialog(AParent)
 {
@@ -25,16 +41,29 @@ JoinMultiChatDialog::JoinMultiChatDialog(IMultiUserChatPlugin *AChatPlugin, cons
 	}
 	onStreamIndexChanged(ui.cmbStreamJid->currentIndex());
 
-	ui.lneHost->setText(ARoomJid.domain().isEmpty() ? QString("conference.%1").arg(FStreamJid.domain()) : ARoomJid.domain());
-	ui.lneRoom->setText(ARoomJid.node());
-	ui.lnePassword->setText(APassword);
-	ui.lneNick->setText(ANick.isEmpty() ? FStreamJid.node() : ANick);
+	if (ARoomJid.isValid())
+	{
+		ui.cmbHistory->setCurrentIndex(-1);
+		ui.lneRoom->setText(ARoomJid.node());
+		ui.lneService->setText(ARoomJid.domain());
+		ui.lneNick->setText(!ANick.isEmpty() ? ANick : FStreamJid.node());
+		ui.lnePassword->setText(APassword);
+	}
+	else if (FRecentRooms.isEmpty())
+	{
+		ui.lneRoom->setText("vacuum");
+		ui.lneService->setText("conference.jabber.ru");
+	}
 
-	if (ANick.isEmpty())
+	if (ARoomJid.isValid() && ANick.isEmpty())
+		onResolveNickClicked();
+	else if (!ARoomJid.isValid() && FRecentRooms.isEmpty())
 		onResolveNickClicked();
 
 	connect(FChatPlugin->instance(),SIGNAL(roomNickReceived(const Jid &, const Jid &, const QString &)),
-	        SLOT(onRoomNickReceived(const Jid &, const Jid &, const QString &)));
+		SLOT(onRoomNickReceived(const Jid &, const Jid &, const QString &)));
+	connect(ui.cmbHistory,SIGNAL(currentIndexChanged(int)),SLOT(onHistoryIndexChanged(int)));
+	connect(ui.tlbDeleteHistory,SIGNAL(clicked()),SLOT(onDeleteHistoryClicked()));
 	connect(ui.tlbResolveNick,SIGNAL(clicked()),SLOT(onResolveNickClicked()));
 	connect(ui.btbButtons,SIGNAL(accepted()),SLOT(onDialogAccepted()));
 }
@@ -67,15 +96,42 @@ void JoinMultiChatDialog::updateResolveNickState()
 	ui.tlbResolveNick->setEnabled(stream!=NULL && stream->isOpen());
 }
 
+void JoinMultiChatDialog::loadRecentConferences()
+{
+	QByteArray data = Options::fileValue("muc.joindialog.recent-rooms",FStreamJid.pBare()).toByteArray();
+	QDataStream stream(data);
+	stream >> FRecentRooms;
+
+	QMultiMap<int, Jid> enters;
+	foreach (Jid roomJid, FRecentRooms.keys())
+		enters.insertMulti(FRecentRooms.value(roomJid).enters,roomJid);
+
+	ui.cmbHistory->blockSignals(true);
+	ui.cmbHistory->clear();
+	foreach(Jid roomJid, enters)
+	{
+		RoomParams params = FRecentRooms.value(roomJid);
+		ui.cmbHistory->addItem(tr("%1 as %2","room as nick").arg(roomJid.bare()).arg(params.nick),roomJid.bare());
+	}
+	ui.cmbHistory->blockSignals(false);
+	ui.tlbDeleteHistory->setEnabled(!FRecentRooms.isEmpty());
+}
+
+void JoinMultiChatDialog::saveRecentConferences()
+{
+	QByteArray data;
+	QDataStream stream(&data, QIODevice::WriteOnly);
+	stream << FRecentRooms;
+	Options::setFileValue(data,"muc.joindialog.recent-rooms",FStreamJid.pBare());
+}
+
 void JoinMultiChatDialog::onDialogAccepted()
 {
-	QString host = ui.lneHost->text();
-	QString room = ui.lneRoom->text();
+	Jid roomJid = ui.lneRoom->text().trimmed() + "@" + ui.lneService->text().trimmed();
 	QString nick = ui.lneNick->text();
 	QString password = ui.lnePassword->text();
 
-	Jid roomJid(room,host,"");
-	if (FStreamJid.isValid() && roomJid.isValid() && !host.isEmpty() && !room.isEmpty() && !nick.isEmpty())
+	if (FStreamJid.isValid() && roomJid.isValid() && !roomJid.node().isEmpty() && roomJid.resource().isEmpty() && !nick.isEmpty())
 	{
 		IMultiUserChatWindow *chatWindow = FChatPlugin->getMultiChatWindow(FStreamJid,roomJid,nick,password);
 		if (chatWindow)
@@ -83,11 +139,18 @@ void JoinMultiChatDialog::onDialogAccepted()
 			chatWindow->showWindow();
 			chatWindow->multiUserChat()->setAutoPresence(true);
 		}
+
+		RoomParams &params = FRecentRooms[roomJid];
+		params.enters++;
+		params.nick = nick;
+		params.password = password;
+		saveRecentConferences();
+
 		accept();
 	}
 	else
 	{
-		QMessageBox::warning(this,windowTitle(),tr("Room parameters is not acceptable.\nCheck values and try again"));
+		QMessageBox::warning(this,windowTitle(),tr("Conference parameters is not acceptable.\nCheck values and try again"));
 	}
 }
 
@@ -95,15 +158,30 @@ void JoinMultiChatDialog::onStreamIndexChanged(int AIndex)
 {
 	FStreamJid = ui.cmbStreamJid->itemText(AIndex);
 	updateResolveNickState();
+	loadRecentConferences();
+	onHistoryIndexChanged(ui.cmbHistory->currentIndex());
+}
+
+void JoinMultiChatDialog::onHistoryIndexChanged(int AIndex)
+{
+	Jid roomJid = ui.cmbHistory->itemData(AIndex).toString();
+	if (FRecentRooms.contains(roomJid))
+	{
+		RoomParams params = FRecentRooms.value(roomJid);
+		ui.lneRoom->setText(roomJid.node());
+		ui.lneService->setText(roomJid.domain());
+		ui.lneNick->setText(params.nick);
+		ui.lnePassword->setText(params.password);
+	}
 }
 
 void JoinMultiChatDialog::onResolveNickClicked()
 {
-	Jid roomJid(ui.lneRoom->text(),ui.lneHost->text(),"");
+	Jid serviceJid = ui.lneService->text().trimmed();
 	IXmppStream *stream = FXmppStreams!=NULL ? FXmppStreams->xmppStream(FStreamJid) : NULL;
-	if (stream!=NULL && stream->isOpen() && roomJid.isValid())
+	if (stream!=NULL && stream->isOpen() && serviceJid.isValid())
 	{
-		if (FChatPlugin->requestRoomNick(FStreamJid,roomJid))
+		if (FChatPlugin->requestRoomNick(FStreamJid,serviceJid))
 		{
 			ui.lneNick->clear();
 			ui.tlbResolveNick->setEnabled(false);
@@ -111,10 +189,21 @@ void JoinMultiChatDialog::onResolveNickClicked()
 	}
 }
 
+void JoinMultiChatDialog::onDeleteHistoryClicked()
+{
+	Jid roomJid = ui.cmbHistory->itemData(ui.cmbHistory->currentIndex()).toString();
+	if (FRecentRooms.contains(roomJid))
+	{
+		FRecentRooms.remove(roomJid);
+		ui.cmbHistory->removeItem(ui.cmbHistory->currentIndex());
+		ui.tlbDeleteHistory->setEnabled(!FRecentRooms.isEmpty());
+	}
+}
+
 void JoinMultiChatDialog::onRoomNickReceived(const Jid &AStreamJid, const Jid &ARoomJid, const QString &ANick)
 {
-	Jid roomJid(ui.lneRoom->text(),ui.lneHost->text(),"");
-	if (AStreamJid == FStreamJid && ARoomJid == roomJid)
+	Jid serviceJid = ui.lneService->text().trimmed();
+	if (AStreamJid==FStreamJid && ARoomJid==serviceJid)
 	{
 		if (ui.lneNick->text().isEmpty())
 			ui.lneNick->setText(ANick.isEmpty() ? FStreamJid.node() : ANick);
@@ -127,7 +216,7 @@ void JoinMultiChatDialog::onStreamAdded(IXmppStream *AXmppStream)
 	ui.cmbStreamJid->addItem(AXmppStream->streamJid().full(), AXmppStream->streamJid().pFull());
 }
 
-void JoinMultiChatDialog::onStreamStateChanged(IXmppStream * AXmppStream)
+void JoinMultiChatDialog::onStreamStateChanged(IXmppStream *AXmppStream)
 {
 	if (AXmppStream->streamJid() == FStreamJid)
 		updateResolveNickState();
