@@ -11,6 +11,7 @@ LEGEND
   [!] Added new plugin for remote controlling
   [+] Added ability to show tabs at the bottom of the tab windows
   [+] Added support of XEP-0199 - XMPP Ping
+  [+] Added maintenance history of visited conferences
   [*} Changed the format of the qoutes design
   [*] Server side archive preferences support is not longer required for retrieving messages history from server
   [*] Added ability to switch between tabs by shortkeys Alt+Number
